// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProvaCompetenzaPreviewView /> visualizza il componente per assegnata = false, ritirata = false 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": "/homepage",
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Prova di competenza"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <EsecuzioneOverview
      assegnaFx={[Function]}
      eseguiSimulaFx={[Function]}
      inCorso={true}
      isAssegnata={true}
      isConsegnata={false}
      isDocente={true}
      isRitirata={false}
      prerequisito="prerequisito"
      ritiraFx={[Function]}
      sottotitolo="sottotitolo"
      tempoEsecuzione={36}
      testo="testo"
      titolo="titolo"
      totaleDomande={12}
      visualizzaStatisticheFx={[Function]}
    />
  </Container>
</Page>
`;

exports[`<ProvaCompetenzaPreviewView /> visualizza il componente per feedback.hasFeedback = true 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": "/homepage",
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Prova di competenza"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <AlertBanner
      actioncolor="tipologia"
      theme={
        Object {
          "brand": "#00BBEF",
          "radius": Object {
            "general": "6px",
          },
        }
      }
    >
      messaggio
    </AlertBanner>
  </Container>
</Page>
`;

exports[`<ProvaCompetenzaPreviewView /> visualizza il componente per spinner = true 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": "/homepage",
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Prova di competenza"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <Spinner
      number={3}
    />
  </Container>
</Page>
`;
